commit for update

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,6 @@ PORT=5000
 
 # MongoDB Connection String
 MONGODB_URI=mongodb://localhost:27017/favvidhub
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:5173
